use ui-router to replace angular-router

--- a/src/app/sidebar/template.html
+++ b/src/app/sidebar/template.html
@@ -1,25 +1,25 @@
 <div class="sidebar-view" ng-controller="App.Sidebar.Controller">
   <ul class="nav nav-sidebar">
     <li class="active">
-      <a href="#/overview">
+      <a ui-sref="overview">
         <span class="glyphicon glyphicon-hdd"></span>
         Overview
       </a>
     </li>
     <li>
-      <a href="#/users">
+      <a ui-sref="users">
         <span class="glyphicon glyphicon-user"></span>
         Users&Groups
       </a>
     </li>
     <li>
-      <a href="#/reports">
+      <a ui-sref="reports">
         <span class="glyphicon glyphicon-stats"></span>
         Reports
       </a>
     </li>
     <li>
-      <a href="#/settings">
+      <a ui-sref="settings">
         <span class="glyphicon glyphicon-cog"></span>
         Settings
       </a>
