add Users Views

--- a/src/app/sidebar/template.html
+++ b/src/app/sidebar/template.html
@@ -7,7 +7,7 @@
       </a>
     </li>
     <li>
-      <a ui-sref="users">
+      <a ui-sref="users.managedUers">
         <span class="glyphicon glyphicon-user"></span>
         Users&Groups
       </a>
