--- a/src/app/users/template.html
+++ b/src/app/users/template.html
@@ -1,3 +1,4 @@
 <div class="users-view" ng-controller="App.Users.Controller">
-  users
+	<div ng-include="'src/app/users/userHeader/template.html'"></div>
+ 	<div ui-view></div>
 </div>
