--- a/src/app/app.less
+++ b/src/app/app.less
@@ -8,6 +8,12 @@
 @import "./header/style";
 @import "./sidebar/style";
 @import "./overview/style";
+
 @import "./users/style";
+@import "./users/externalUers/style";
+@import "./users/groups/style";
+@import "./users/managedUsers/style";
+@import "./users/userHeader/style";
+
 @import "./reports/style";
 @import "./settings/style";
