--- a/src/app/users/userHeader/template.html
+++ b/src/app/users/userHeader/template.html
@@ -1,7 +1,7 @@
 <div class="UserHeader-view" ng-controller="App.Users.UserHeader.Controller">
   <ul class="nav nav-sidebar">
     <li class="active">
-      <a ui-sref="users.managedUers">
+      <a ui-sref="users.managedUsers">
         <span class="glyphicon glyphicon-hdd"></span>
         ManagerUser
       </a>
