--- a/src/app/users/managedUsers/style.less
+++ b/src/app/users/managedUsers/style.less
@@ -1,3 +1,14 @@
 .users-view {
   color: red;
+ 
+    .gridStyle {
+        border: 1px solid rgb(212,212,212);
+        width: 600px; 
+        height: 300px;
+    }
+    
+    button {
+        background-color: #4a9afd;
+        color: #ffffff;
+    }
 }
