--- a/src/app/users/managedUsers/template.html
+++ b/src/app/users/managedUsers/template.html
@@ -5,10 +5,7 @@
 		<button ng-click='bulkadd()' class="btn">bulkadd</button>
 		<button ng-click='exportUser()' class="btn">exportUser</button>
 	</div>
-	<div ng-repeat="user in userList">
-		<div>{{user.user_name}}</div>
-	</div>
-  	<!--<div class="gridStyle" ng-grid="gridOptions"></div>-->
+  	<div class="gridStyle" ng-grid="gridOptions"></div>
 </div>
 
 <div class="addUser">	
