--- a/src/app/users/managedUsers/add-user-modal.html
+++ b/src/app/users/managedUsers/add-user-modal.html
@@ -1,10 +1,23 @@
-<div class="modal-header">
-    <h3 class="modal-title">AddUser</h3>
-</div>
-<div class="modal-body">
-    AddUserForm
-</div>
-<div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">OK</button>
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+<div ng-controller="App.Users.ManagedUsers.Controller">
+	<div class="modal-header">
+    	<h3 class="modal-title">AddUser</h3>
+	</div>
+	<div class="modal-body">
+    	<div>
+    		<label>USERNAME:</label><input type="text" ng-model="user.user_name"/> 		
+    	</div>
+    	<div>
+    		<label>EMAIL:</label><input type="text" ng-model="user.email"/>
+    	</div>
+    	<div>
+    		<label>PASSWORD:</label><input type="text" ng-model="user.password"/> 
+    	</div>
+    	<div>
+    		<label>GROUNPID:</label><input type="text" ng-model="user.group_id"/>
+    	</div>
+	</div>
+	<div class="modal-footer">
+    	<button class="btn btn-primary" ng-click="ok(user)">OK</button>
+    	<button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+	</div>
 </div>
