--- a/src/app/users/managedUsers/update-user-modal.html
+++ b/src/app/users/managedUsers/update-user-modal.html
@@ -3,7 +3,7 @@
 </div>
 <div class="modal-body">
 	<div>
-		<label>USERNAME:</label><input type="text" ng-model="updateuser.real_name"/> 		
+		<label>USERNAME:</label><input type="text" ng-model="editUser.real_name"/> 		
 	</div>
 	<!--<div>
 		<label>EMAIL:</label><input type="text" ng-model="user.email"/>
@@ -16,6 +16,6 @@
 	</div>-->
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="ok(updateuser)">OK</button>
+	<button class="btn btn-primary" ng-click="ok()">OK</button>
 	<button class="btn btn-warning" ng-click="cancel()">Cancel</button>
 </div>
