--- a/src/app/users/managedUsers/add-user-modal.html
+++ b/src/app/users/managedUsers/add-user-modal.html
@@ -76,7 +76,7 @@
 			<label class="col-sm-2 control-label">账号管理员</label>
 			<div id="changeco-admin" class="col-sm-4">
 				<div class="checkbox">
-					<div class="downmune" ng-click="menueShow()">
+					<div class="downmune" ng-click="switchAccountAdmin()">
 						<a>
 							更改账号管理员&nbsp;
 						</a><span class="glyphicon glyphicon-circle-arrow-down"></span>
@@ -84,7 +84,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="accountadmin" ng-show='show'>
+		<div class="account-admin" ng-show='showAccountAdmin'>
 			<div class="form-group">
 				<label for="newadmin" class="col-sm-2 control-label">新管理员</label>
 				<div class="col-sm-10">
@@ -128,13 +128,13 @@
 					<tbody ng-repeat="group in groupList">
 						<tr>
 							<td>
-								<input type="checkbox" name="checkbox" id="checkbox" ng-click="menueRollShow()">
+								<input type="checkbox" name="checkbox" id="checkbox" ng-click="switchRoleMenu(group)">
 								{{group.group_name}}
 							</td>
 							<td>
 								{{group.group_desc}}
 							</td>
-							<td class="rolltd" ng-show = "menueRoll">
+							<td class="rolltd" ng-show = "group.showRoleMenu">
 							<div class="roll" style="display: block;">
 								<select id="roll" class="">
 									<option value="1">群组成员</option>
@@ -162,7 +162,7 @@
 							<th>文件夹名</th><th>拥有者</th><th>文件数</th><th>权限</th>
 						</tr>
 					</thead>
-					<tbody data-bind="foreach: filedataArry"></tbody>
+					<!-- <tbody data-bind="foreach: filedataArray"></tbody> -->
 				</table>
 			</div>
 		</div>
