--- a/src/app/app.less
+++ b/src/app/app.less
@@ -7,6 +7,8 @@
 
 @import "./global";
 
+@import "./widgets/notification/style";
+
 @import "./header/style";
 @import "./sidebar/style";
 @import "./overview/style";
