--- a/src/app/widgets/notification/template.html
+++ b/src/app/widgets/notification/template.html
@@ -1,9 +1,6 @@
-<div class="modal-header">
-    <h3 class="modal-title">{{notification.title}}</h3>
-</div>
 <div class="modal-body">
-    <alert type="{{notification.type}}">{{notification.msg}}</alert>
-</div>
-<div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">OK</button>
+    <div class="alert alert-{{notification.type}} alert-dismissible" role="alert">
+      <button type="button" class="close" ng-click="close()" ng-show="notification.closeable" data-dismiss="alert"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+      {{notification.msg}}
+    </div>
 </div>
