add overview angular-charts    and  group

--- a/src/app/users/groups/delete-group-modal.html
+++ b/src/app/users/groups/delete-group-modal.html
@@ -1,8 +1,8 @@
 <div class="modal-header">
-	<h3 class="modal-title">DeleteUser</h3>
+	<h3 class="modal-title">DeleteGroup</h3>
 </div>
 <div class="modal-body">
-	Are you sure delete this user?
+	Are you sure delete this group?
 </div>
 <div class="modal-footer">
 	<button class="btn btn-primary" ng-click="ok()">OK</button>
