--- a/src/app/users/groups/style.less
+++ b/src/app/users/groups/style.less
@@ -1,3 +1,13 @@
 .externalUers-view {
-  color: red;
+    
+    .groupGridStyle {
+        border: 1px solid rgb(212,212,212);
+        width: 600px; 
+        height: 300px;
+    }
+    
+    button {
+      background-color: #4a9afd;
+      color: #ffffff;
+    }
 }
