--- a/src/app/overview/template.html
+++ b/src/app/overview/template.html
@@ -1,3 +1,3 @@
 <div class="overview-view" ng-controller="App.Overview.Controller">
-  overview
+	<div data-ac-chart="'pie'" data-ac-data="data" data-ac-config="config" class="chart"></div>
 </div>
