--- a/src/app/users/groups/template.html
+++ b/src/app/users/groups/template.html
@@ -1,3 +1,6 @@
 <div class="externalUers-view" ng-controller="App.Users.Groups.Controller">
-  Groups
+  <div class="buttonGroup">
+		<button ng-click='addGroup()' class="btn">addGroup</button>
+	</div>
+  	<div class="groupGridStyle" ng-grid="groupGridOptions"></div>
 </div>
