--- a/src/app/users/groups/update-group-modal.html
+++ b/src/app/users/groups/update-group-modal.html
@@ -1,8 +1,10 @@
 <div class="modal-header">
-	<h3 class="modal-title">DeleteUser</h3>
+	<h3 class="modal-title">updateGroup</h3>
 </div>
 <div class="modal-body">
-	Are you sure delete this user?
+	<div>
+		<label>USERNAME:</label><input type="text" ng-model="editGroup.group_name"/> 		
+	</div>
 </div>
 <div class="modal-footer">
 	<button class="btn btn-primary" ng-click="ok()">OK</button>
