--- a/src/app/users/managedUsers/add-user-modal.html
+++ b/src/app/users/managedUsers/add-user-modal.html
@@ -1,4 +1,5 @@
 <div class="modal-header">
+	<button class="bootbox-close-button close" type="button" ng-click="cancel()">×</button>
 	<h3 class="modal-title">AddUser</h3>
 </div>
 <div class="modal-body">
@@ -113,13 +114,13 @@
 		<div class="form-group">
 			<label class="col-sm-2 control-label" for="seach">选择该用户所属的群组</label>
 			<div class="col-sm-5">
-				<!--<input type="text" ng-model="seachGroupsValue" ng-change="seachGroups(seachGroupsValue)"/>-->
-				<input type="text" placeholder="查询群组" id="seach" class="form-control" ng-model= "seachGroupsValue" ng-change="seachGroups()">
+				<input type="text" ng-model="seachGroupsValue" ng-change="seachGroups(seachGroupsValue)"/>
+				<!--<input type="text" placeholder="查询群组" id="seach" class="form-control" ng-model= "seachGroupsValue" ng-change="seachGroups()">-->
 			</div>
 		</div>
 		<div class="form-group">
 			<label class="col-sm-2 control-label" for="seach">aaa</label>
-			<div class="col-sm-8">
+			<div class="col-sm-9">
 				<table id="group_table" class="table table-hover">
 					<thead>
 						<tr>
@@ -156,7 +157,7 @@
 		</div>
 		<div class="form-group">
 			<label class="col-sm-2 control-label" for="seach">aaa</label>
-			<div class="col-sm-5">
+			<div class="col-sm-6">
 				<table id="file_table" class="table table-hover">
 					<thead>
 						<tr>
