--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -1,5 +1,11 @@
 .header-view {
-  .navbar-form {
-    text-align: center;
-  }
+    .header-ext{
+        background-color: @header-ext-background-color;
+        height: 20px;
+    }
+    
+    .header-search{
+        background-color: @header-search-background-color;
+        border-bottom: 1px solid black;
+    }
 }
