--- a/src/themes/dark/colors.less
+++ b/src/themes/dark/colors.less
@@ -1,1 +1,6 @@
-@body-background-color:   black;
+// global
+@body-background-color:   white;
+
+// header
+@header-ext-background-color: #B16B24;
+@header-search-background-color: #EFEEEA;
