--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -1,18 +1,25 @@
-<div class="navbar header-view" role="navigation" ng-controller="App.Header.Controller">
+<div class="header-view" ng-controller="App.Header.Controller">
+	<div class="header-ext"></div>
+	<div class="header-search" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">{{'ADMIN_CONSOLE_OF_ACT' | translate}}</a>
-    </div>
-    <div>
-      <form class="navbar-form" role="form">
-        <div class="form-group">
-          <input type="search" placeholder="Search" class="form-control">
-        </div>
-        <div class="pull-right">
-          <a href="#">Back to my account</a>
-          <span class="glyphicon glyphicon-cog"></span>
-        </div>
-      </form>
-    </div>
-  </div>
+					Admin Console Of Act
+				</a>
+			</div>
+			<div>
+				<form class="navbar-form" role="form">
+					<div class="form-group">
+						<input type="search" placeholder="Search" class="form-control">
+					</div>
+					<div class="pull-right">
+						<a href="#">
+							Back to my account
+						</a>
+						<span class="glyphicon glyphicon-cog"></span>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 </div>
