--- a/src/themes/default/colors.less
+++ b/src/themes/default/colors.less
@@ -1,1 +1,9 @@
+// global
 @body-background-color:   white;
+
+// header
+@header-ext-background-color: #B16B24;
+@header-search-background-color: #EFEEEA;
+
+//sidebar
+@sidebar-background-color: #EFEEEA;
