--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -1,7 +1,7 @@
 <div class="navbar header-view" role="navigation" ng-controller="App.Header.Controller">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Admin Console Of Act</a>
+      <a class="navbar-brand" href="#">{{'ADMIN_CONSOLE_OF_ACT' | translate}}</a>
     </div>
     <div>
       <form class="navbar-form" role="form">
