--- a/src/app/users/managedUsers/style.less
+++ b/src/app/users/managedUsers/style.less
@@ -1,9 +1,16 @@
 .managedUsers-view {
   color: red;
+  height: 100%;
   .gridStyle {
     border: 1px solid rgb(212,212,212);
-    width: 600px; 
-    height: 300px;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 34px;
+    .ngVerticalBarVisible{
+        width: 0;
+    }
   }
   
   button {
