--- a/src/app/users/style.less
+++ b/src/app/users/style.less
@@ -1,4 +1,12 @@
 .users-view {
   color: red;
+  height: 100%;
+  .grid-view {
+      bottom: 0;
+      left: 0;
+      position: absolute;
+      right: 0;
+      top: 40px;
+  }
 }
 
