--- a/src/app/users/template.html
+++ b/src/app/users/template.html
@@ -1,4 +1,4 @@
 <div class="users-view" ng-controller="App.Users.Controller">
 	<div ng-include="'src/app/users/userHeader/template.html'"></div>
- 	<div ui-view></div>
+ 	<div ui-view class="grid-view"></div>
 </div>
