--- a/src/app/users/userHeader/style.less
+++ b/src/app/users/userHeader/style.less
@@ -1,8 +1,7 @@
-.externalUers-view {
-  color: red;
-}
-
-.users-view .nav-sidebar li{
-    width: 140px;
-    float: left;
+.user-header-view{
+    border-bottom: 1px solid black;
+    .nav-sidebar li{
+        width: 140px;
+        float: left;        
+    }
 }
