--- a/src/app/users/userHeader/template.html
+++ b/src/app/users/userHeader/template.html
@@ -1,4 +1,4 @@
-<div class="UserHeader-view" ng-controller="App.Users.UserHeader.Controller">
+<div class="user-header-view" ng-controller="App.Users.UserHeader.Controller">
   <ul class="nav nav-sidebar">
     <li class="active">
       <a ui-sref="users.managedUsers">
