--- a/src/themes/dark/colors.less
+++ b/src/themes/dark/colors.less
@@ -2,5 +2,8 @@
 @body-background-color:   white;
 
 // header
-@header-ext-background-color: #B16B24;
-@header-search-background-color: #EFEEEA;
+@header-ext-background-color: red;
+@header-search-background-color: green;
+
+//sidebar
+@sidebar-background-color: black;
