--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -1,23 +1,15 @@
 <div class="header-view" ng-controller="App.Header.Controller">
-	<div class="header-ext"></div>
+	<div class="header-ext">
+		<div class="back-main pull-right">
+			<div class="back-img"></div>
+			返回我的主页面
+		</div>
+	</div>
 	<div class="header-search" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="#">{{'ADMIN_CONSOLE_OF_ACT' | translate}}</a>
-			</div>
-			<div>
-				<form class="navbar-form" role="form">
-					<div class="form-group">
-						<input type="search" placeholder="Search" class="form-control">
-					</div>
-					<div class="pull-right">
-						<a href="#">
-							Back to my account
-						</a>
-						<span class="glyphicon glyphicon-cog"></span>
-					</div>
-				</form>
-			</div>
+		<div class="logo pull-left"></div>
+		<div class="search pull-left">
+			<input type="text" class="search-text form-control" placeholder="搜索"/>
+			<button class="search-button btn btn-default">搜索</button>
 		</div>
 	</div>
 </div>
