--- a/src/themes/default/colors.less
+++ b/src/themes/default/colors.less
@@ -2,8 +2,8 @@
 @body-background-color:   white;
 
 // header
-@header-ext-background-color: #B16B24;
+@header-ext-background-color: #1F69BA;
 @header-search-background-color: #EFEEEA;
 
 //sidebar
-@sidebar-background-color: #EFEEEA;
+@sidebar-background-color: #eceff1;
