--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -1,11 +1,53 @@
 .header-view {
     .header-ext{
-        background-color: @header-ext-background-color;
-        height: 20px;
+        background-image: url("../../src/images/web_topbar_blue.png");
+//      background-color: @header-ext-background-color;
+        color: white;
+        height: 30px;
+        .back-main{
+            margin-right: 36px;
+            margin-top: 5px;
+            cursor: pointer;
+            font-size: 12px;
+            .back-img{
+                background: url("../../src/images/back.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+                float: left;
+                height: 14px;
+                margin-right: 3px;
+                margin-top: 3px;
+                width: 13px;
+            }
+        }
+        
     }
     
     .header-search{
-        background-color: @header-search-background-color;
-        border-bottom: 1px solid black;
+        background: url("../../src/images/web_topbar_gray.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+        height: 48px;
+        
+        .logo{
+            height: 32px;
+            width: 147px;
+            position: relative;
+            left: 20px;
+            top: 8px;
+            background: url("../../src/images/logo.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+        }
+        
+        .search{
+            position: relative;
+            left: 153px;
+            top: 8px;
+            width: 450px;
+            .search-text{
+                background: url("../../src/images/search_icon.png") no-repeat scroll 10px 10px rgba(0, 0, 0, 0);
+                float: left;
+                width: 270px;
+                padding-left: 35px;
+            }
+            .search-button{
+                margin-left: 27px;
+            }
+        }
     }
 }
