--- a/src/app/sidebar/style.less
+++ b/src/app/sidebar/style.less
@@ -1,6 +1,48 @@
 .sidebar-view {
     float: left;
-    width: 160px;
+    width: 260px;
     height: 100%;
-    background-color: @sidebar-background-color;
+    .overview{
+        padding-left: 45px;
+    }
+    .overview-img{
+        background: url("../../src/images/icon_overview.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+        height:19px;
+        width: 19px;
+        left: 20px;
+        position: absolute;
+    }
+    .users{
+        padding-left: 45px;
+    }
+    .users-img{
+        background: url("../../src/images/icon_users.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+        height:19px;
+        width: 19px;
+        left: 20px;
+        position: absolute;
+    }
+    .reports{
+        padding-left: 45px;
+    }
+    .reports-img{
+        background: url("../../src/images/icon_overview.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+        height:19px;
+        width: 19px;
+        left: 20px;
+        position: absolute;
+    }
+    .settings{
+        padding-left: 45px;
+    }
+    .settings-img{
+        background: url("../../src/images/icon_setting.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+        height:19px;
+        width: 19px;
+        left: 20px;
+        position: absolute;
+    }
+    .active{
+        background-color: #d6dce2;
+    }
 }
