--- a/src/app/global.less
+++ b/src/app/global.less
@@ -20,7 +20,7 @@ html, body {
     width: 260px;
     position: relative;
     border-right:1px solid #bbbbbb;
-    background-color: @sidebar-background-color;
+    background-color: #eceff1;
 }
 
 .right-main{
