--- a/src/app/users/userHeader/style.less
+++ b/src/app/users/userHeader/style.less
@@ -1,7 +1,15 @@
-.user-header-view{
-    border-bottom: 1px solid black;
-    .nav-sidebar li{
+.user-header-view {
+    border-bottom: 1px solid #afafaf;
+    padding-top: 12px;
+    padding-bottom: 8px;
+    padding-left: 40px;
+    height: 60px;
+    .nav-sidebar li {
         width: 140px;
-        float: left;        
+        float: left;           
     }
+    .active {
+        background-color: #1F69BA;
+        color: white;
+    } 
 }
