--- a/src/app/users/style.less
+++ b/src/app/users/style.less
@@ -1,12 +1,21 @@
 .users-view {
-  color: red;
   height: 100%;
   .grid-view {
       bottom: 0;
       left: 0;
       position: absolute;
       right: 0;
-      top: 40px;
+      top: 60px;
+      padding: 0;
+  }
+  .main-bottom{
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 40px;
+      text-align: center;
+      font-size: 12px;
+      border-top:1px solid #afafaf;
   }
 }
 
