--- a/src/app/users/template.html
+++ b/src/app/users/template.html
@@ -1,4 +1,8 @@
 <div class="users-view" ng-controller="App.Users.Controller">
 	<div ng-include="'src/app/users/userHeader/template.html'"></div>
- 	<div ui-view class="grid-view"></div>
+ 	<div ui-view class="grid-view container"></div>
+ 	<div class="main-bottom">
+ 		<div>版权所有©2013 上海灵利信息技术有限公司</div>
+		<div>沪网文[2011]0682-074增值电信业务经营许可证编号:沪B2-20080012 </div>
+ 	</div>
 </div>
