--- a/src/app/sidebar/template.html
+++ b/src/app/sidebar/template.html
@@ -1,24 +1,24 @@
 <div class="sidebar-view" ng-controller="App.Sidebar.Controller">
   <ul class="nav nav-sidebar">
-    <li ui-sref-active="active">
+    <li ng-class="{ active: $state.includes('overview') }">
       <a ui-sref="overview" class="overview">
         <span class="overview-img"></span>
         	概况
       </a>
     </li>
-    <li ui-sref-active="active">
+    <li ng-class="{ active: $state.includes('users') }">
       <a ui-sref="users.managedUsers" class="users">
         <span class="users-img"></span>
         	用户与群组
       </a>
     </li>
-    <li ui-sref-active="active">
+    <li ng-class="{ active: $state.includes('reports') }">
       <a ui-sref="reports" class="reports">
         <span class="reports-img"></span>
         	报告
       </a>
     </li>
-    <li ui-sref-active="active">
+    <li ng-class="{ active: $state.includes('settings') }">
       <a ui-sref="settings" class="settings">
         <span class="settings-img"></span>
        		设置
