--- a/src/app/users/managedUsers/style.less
+++ b/src/app/users/managedUsers/style.less
@@ -66,4 +66,22 @@
   .tdroll{
       width: 140px;
   }
+  
+  h4{
+      border-bottom: 1px solid #e5e5e5;
+      padding-bottom: 5px;
+  }
+  
+  .permission-form{
+      padding-left: 20px;
+  }
+  
+  .unit{
+      padding-top: 6px;
+      padding-left: 0px;
+  }
+  
+  .gridStyle{
+      height: 130px;
+  }
 }
